--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to my website</h1>
-    <h2>Hello!</h2>
+    <h2>Salutations!</h2>
     <p>Hello, world!</p>
 </body>
 </html>
