--- a/hello.html
+++ b/hello.html
@@ -6,10 +6,8 @@
     <title>Hello!</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
-
+    <h1 style = "color: blue;">Welcome to my website</h1>
     <h2>Greetings!</h2>
-
     <p>Hello, world!</p>
 </body>
 </html>
